# jammed_key_detector

./: .gitignore  LICENSE  Pipfile  README.md  config.ini  helpers.py  main.py  pyproject.toml  requirements.txt  setup.py
jammed_key_detector/: functions.py  gui.py  main.py
